# vqgan

./: .gitignore  README.md  pyproject.toml
vqgan/: basic_block.py  cifar100_data.py  code_generator.py  codebook.py  dataset.py  decoder.py  discriminator.py  downsample_block.py  encoder.py  latent_codes_evaluation.py  metrics.py  mobilenet.py  non_local_block.py  perceptual_loss.py  residual_block.py  train_ae.py  train_code_generator.py  train_conditional_code_generator.py  train_vqgan.py  train_vqgan2.py  train_vqvae.py  train_vqwgan.py  upsample_block.py  vgg.py
vqgan/apps/: generate_images.py  latent_codes_evaluation.py
