[tool.poetry]
name = "vqgan"
version = "0.1.0"
description = ""
authors = ["giblets2570 <tomkeohanemurray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
torch = "^2.0.0"
pytorch-lightning = "^2.0.0"
torchvision = "^0.15.1"
einops = "^0.6.0"
tensorboard = "^2.12.0"
torchviz = "^0.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
