[tool.poetry]
name = "vqgan"
version = "0.1.0"
description = ""
authors = ["giblets2570 <tomkeohanemurray@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7"
torch = "^2.0.0"
pytorch-lightning = "^2.0.0"
torchvision = "^0.15.1"
einops = "^0.6.0"
tensorboard = "^2.12.0"
torchviz = "^0.0.2"
lpips = "^0.1.4"
torchmetrics = "^0.11.4"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
streamlit = "^1.20.0"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
transformers = "^4.27.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
